[package]
name = "use-event-simulation"
description = "Simple event simulation helpers over finite event lists"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-event-simulation"
keywords = ["simulation", "event", "schedule", "timeline"]
categories = ["algorithms", "science"]

[lints]
workspace = true