[package]
name = "use-random-walk"
description = "Repeatable one-dimensional random walk helpers"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/use-random-walk"
keywords = ["simulation", "random", "walk", "path"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
use-seed.workspace = true

[lints]
workspace = true