[package]
name = "use-simulation-clock"
description = "Deterministic simulation clock helpers"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-simulation-clock"
keywords = ["simulation", "clock", "tick", "time"]
categories = ["algorithms", "science"]

[lints]
workspace = true
