[package]
name = "use-simulation-result"
description = "Summary helpers for finite simulation result series"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/use-simulation-result"
keywords = ["simulation", "result", "summary", "series"]
categories = ["algorithms", "mathematics", "science"]

[lints]
workspace = true