[package]
name = "use-state-step"
description = "State transition helpers for primitive simulations"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/use-state-step"
keywords = ["simulation", "state", "step", "transition"]
categories = ["algorithms", "science"]

[lints]
workspace = true